# Portaudio-practice

official_examples/: CMakeLists.txt  paex_write_sine.c
pacap/: CMakeLists.txt  pacap.c
test_format/: a.out  pacap.c
traverse_device/: a.out  traver_default.c
tutorial/: a.out  swatooth.c
